8203680: os::stat() on Posix platform does not need to copy input path

Reviewed-by: hseigel, dholmes